--- a/GISTin.rc
+++ b/GISTin.rc
@@ -129,6 +129,7 @@ BEGIN
     BEGIN
         MENUITEM "打开",                          ID_SHAPEFILE_OPEN
         MENUITEM "保存",                          ID_SHAPEFILE_SAVE
+        MENUITEM "建立拓扑关系",                      ID_TOPOCONSTRUCT
     END
 END
 
