--- a/GISTin.rc
+++ b/GISTin.rc
@@ -117,6 +117,7 @@ BEGIN
         MENUITEM "选择",                          ID_SELECT
         MENUITEM "选起点",                         ID_STARTPNT
         MENUITEM "选终点",                         ID_ENDPNT
+        MENUITEM "test",                        ID_TESTCASE
     END
     POPUP "显示控制"
     BEGIN
