1.用更高效的multiset代替vector，插入元素后可保持集合中元素是有序的。但还要改写排序规则。 2.由于结构体无法访问PointData点集，因此基本数据类型改为MyPoint*，通过指针解引用得到accu值，以用于排序。

--- a/GISTin.rc
+++ b/GISTin.rc
@@ -131,6 +131,7 @@ BEGIN
         MENUITEM "打开",                          ID_SHAPEFILE_OPEN
         MENUITEM "保存",                          ID_SHAPEFILE_SAVE
         MENUITEM "建立拓扑关系",                      ID_TOPOCONSTRUCT
+        MENUITEM "路径生成",                        ID_CREATEPATH
     END
 END
 
