1.改写DrawDelaunay，为不同的边设置不同的画笔（通行为蓝色，不通行为灰色）。编写函数AssignEdgeAttribute，本来想使用gdal的intersection进行赋值，结果失败，.遂改为添加栅格数据为底图，用以给边链表赋值（walkable为true或false）。 2.添加了多个测试数据，并修正了一些bug（>50W个点会将pointNumber置为0= =!不知道吴文周在想啥。。） 3.给边DCEL类添加了walkable属性，默认为true；添加AssignEdgeAttribute函数，用以以更改边的walkable属性。

--- a/GISTin.vcxproj
+++ b/GISTin.vcxproj
@@ -15,6 +15,7 @@
     <SccLocalPath />
     <Keyword>MFCProj</Keyword>
     <ProjectGuid>{9A40C4B1-8939-4DFC-9CD5-944A19CD79C4}</ProjectGuid>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -52,6 +53,8 @@
     <OutDir>.\Release\</OutDir>
     <IntDir>.\Release\</IntDir>
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(GDAL_INC);$(IncludePath)</IncludePath>
+    <LibraryPath>$(GDAL_LIB);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -133,6 +136,7 @@
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <SubSystem>Windows</SubSystem>
       <OutputFile>.\Release\GISTin.exe</OutputFile>
+      <AdditionalDependencies>gdal_i.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
