--- a/GISTin.rc
+++ b/GISTin.rc
@@ -133,6 +133,10 @@ BEGIN
         MENUITEM "建立拓扑关系",                      ID_TOPOCONSTRUCT
         MENUITEM "路径生成",                        ID_CREATEPATH
     END
+    POPUP "栅格数据"
+    BEGIN
+        MENUITEM "打开",                          ID_RASTER_OPEN
+    END
 END
 
 
