1.添加“路径优化”菜单并实现功能，使用模板函数实现，便于不同栅格数据源的应用。 2.移植了DDA_Line线的栅格化算法，进行通视检测，从而去除不必要的路径点。

--- a/GISTin.rc
+++ b/GISTin.rc
@@ -132,6 +132,7 @@ BEGIN
         MENUITEM "保存",                          ID_SHAPEFILE_SAVE
         MENUITEM "建立拓扑关系",                      ID_TOPOCONSTRUCT
         MENUITEM "路径生成",                        ID_CREATEPATH
+        MENUITEM "路径优化",                        32829
     END
     POPUP "栅格数据"
     BEGIN
