--- a/GISTin.rc
+++ b/GISTin.rc
@@ -133,6 +133,7 @@ BEGIN
         MENUITEM "建立拓扑关系",                      ID_TOPOCONSTRUCT
         MENUITEM "路径生成",                        ID_CREATEPATH
         MENUITEM "路径优化",                        32829
+        MENUITEM "缩小点集并加密",                     ID_POINT_DENSIFY
     END
     POPUP "栅格数据"
     BEGIN
