CListCtrl控件用于属性表的显示。

--- a/GISTin.rc
+++ b/GISTin.rc
@@ -144,6 +144,10 @@ BEGIN
     BEGIN
         MENUITEM "打开",                          ID_RASTER_OPEN
     END
+    POPUP "设置"
+    BEGIN
+        MENUITEM "运行参数设置",                      ID_SETTING
+    END
 END
 
 
@@ -205,13 +209,16 @@ END
 
 IDD_PARAM_DIALOG DIALOGEX 0, 0, 267, 235
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Dialog"
+CAPTION "设置"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "确定",IDOK,151,214,50,14
     PUSHBUTTON      "取消",IDCANCEL,210,214,50,14
-    COMBOBOX        IDC_COMBO1,118,22,97,24,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "行人类型: ",IDC_MAN_TYPE,43,25,38,8
+    COMBOBOX        IDC_MANTYPE,118,22,97,24,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "行人类型: ",IDC_STATIC1,43,25,38,8
+    LTEXT           "通行模式: ",IDC_STATIC2,44,51,46,8
+    COMBOBOX        IDC_WALK_TYPE,118,48,97,14,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "",IDC_TABLE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,19,78,230,121
 END
 
 
@@ -310,7 +317,10 @@ BEGIN
     0, 0, 0, 0,
     0, 0, 0, 0,
     0, 0, 0, 0,
-    0, 0, 100, 100
+    0, 0, 100, 100,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0
 END
 
 
