--- a/GISTin.vcxproj
+++ b/GISTin.vcxproj
@@ -96,7 +96,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <OutputFile>.\Debug\GISTin.exe</OutputFile>
-      <AdditionalDependencies>gdal_i.lib;legacy_stdio_definitions.lib</AdditionalDependencies>
+      <AdditionalDependencies>gdal_i.lib;legacy_stdio_definitions.lib;comsuppw.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
