调整了属性表单的构成

--- a/GISTin.rc
+++ b/GISTin.rc
@@ -207,20 +207,20 @@ BEGIN
     EDITTEXT        IDC_EDIT4,46,73,49,14,ES_AUTOHSCROLL
 END
 
-IDD_PARAM_DIALOG DIALOGEX 0, 0, 309, 278
+IDD_PARAM_DIALOG DIALOGEX 0, 0, 357, 278
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "设置"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "确定",IDOK,157,250,50,14
-    PUSHBUTTON      "取消",IDCANCEL,237,249,50,14
-    COMBOBOX        IDC_MAN_TYPE,63,55,63,175,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "行人类型: ",IDC_STATIC1,21,57,38,8
-    LTEXT           "通行模式: ",IDC_STATIC2,173,57,46,8
-    COMBOBOX        IDC_WALK_TYPE,216,55,69,149,CBS_DROPDOWNLIST | CBS_SORT | CBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "",IDC_TABLE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,114,83,174,148
-    LISTBOX         IDC_META_TYPE,22,83,72,148,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "",IDC_FILEBROWSE,"MfcEditBrowse",WS_BORDER | WS_TABSTOP | 0x880,21,26,261,14,WS_EX_ACCEPTFILES
+    DEFPUSHBUTTON   "确定",IDOK,205,246,50,14
+    PUSHBUTTON      "取消",IDCANCEL,281,246,50,14
+    COMBOBOX        IDC_MAN_TYPE,74,53,77,175,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "行人类型: ",IDC_STATIC1,32,55,38,8
+    LTEXT           "通行模式: ",IDC_STATIC2,193,55,46,8
+    COMBOBOX        IDC_WALK_TYPE,236,53,88,149,CBS_DROPDOWNLIST | CBS_SORT | CBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "",IDC_TABLE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,108,80,228,148
+    LISTBOX         IDC_META_TYPE,19,80,77,148,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "",IDC_FILEBROWSE,"MfcEditBrowse",WS_BORDER | WS_TABSTOP | 0x880,31,23,292,14,WS_EX_ACCEPTFILES
 END
 
 
@@ -286,7 +286,7 @@ BEGIN
     IDD_PARAM_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 302
+        RIGHTMARGIN, 350
         TOPMARGIN, 7
         BOTTOMMARGIN, 271
     END
