界面重构（大表拆分）；添加内部属性对照表，用id完成对接

--- a/GISTin.rc
+++ b/GISTin.rc
@@ -207,20 +207,23 @@ BEGIN
     EDITTEXT        IDC_EDIT4,46,73,49,14,ES_AUTOHSCROLL
 END
 
-IDD_PARAM_DIALOG DIALOGEX 0, 0, 357, 278
+IDD_PARAM_DIALOG DIALOGEX 0, 0, 293, 302
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "设置"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "确定",IDOK,205,246,50,14
-    PUSHBUTTON      "取消",IDCANCEL,281,246,50,14
-    COMBOBOX        IDC_MAN_TYPE,74,53,77,175,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "行人类型: ",IDC_STATIC1,32,55,38,8
-    LTEXT           "通行模式: ",IDC_STATIC2,193,55,46,8
-    COMBOBOX        IDC_WALK_TYPE,236,53,88,149,CBS_DROPDOWNLIST | CBS_SORT | CBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "",IDC_TABLE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,108,80,228,148
-    LISTBOX         IDC_META_TYPE,19,80,77,148,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "",IDC_FILEBROWSE,"MfcEditBrowse",WS_BORDER | WS_TABSTOP | 0x880,31,23,292,14,WS_EX_ACCEPTFILES
+    DEFPUSHBUTTON   "确定",IDOK,138,265,50,14
+    PUSHBUTTON      "取消",IDCANCEL,214,265,50,14
+    COMBOBOX        IDC_MAN_TYPE,65,47,65,175,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "行人类型: ",IDC_STATIC1,21,49,38,8
+    LTEXT           "通行模式: ",IDC_STATIC2,148,50,40,8
+    COMBOBOX        IDC_WALK_TYPE,192,48,70,149,CBS_DROPDOWNLIST | CBS_SORT | CBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "",IDC_TABLE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,20,104,244,148
+    CONTROL         "",IDC_FILEBROWSE,"MfcEditBrowse",WS_BORDER | WS_TABSTOP | 0x880,22,23,239,14,WS_EX_ACCEPTFILES
+    COMBOBOX        IDC_TARGET_TYPE,192,75,70,124,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "通行目标:",IDC_STATIC,147,78,41,12
+    COMBOBOX        IDC_FACTOR_TYPE,64,76,66,63,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "因子类型:",IDC_STATIC,21,78,41,11
 END
 
 
@@ -286,9 +289,9 @@ BEGIN
     IDD_PARAM_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 350
+        RIGHTMARGIN, 286
         TOPMARGIN, 7
-        BOTTOMMARGIN, 271
+        BOTTOMMARGIN, 295
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -320,6 +323,9 @@ BEGIN
     0, 0, 0, 0,
     0, 0, 0, 0,
     0, 0, 100, 100,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
     0, 0, 0, 0,
     0, 0, 0, 0,
     0, 0, 0, 0,
