重构内部表并完成了map<pair<int, int>, double> 表格变量的工作，用pair<int, int>当作键，默认值为1（用[]运算符存储才能覆盖）。

--- a/GISTin.rc
+++ b/GISTin.rc
@@ -218,12 +218,11 @@ BEGIN
     LTEXT           "行人类型: ",IDC_STATIC1,21,49,38,8
     LTEXT           "通行模式: ",IDC_STATIC2,148,50,40,8
     COMBOBOX        IDC_WALK_TYPE,192,48,70,149,CBS_DROPDOWNLIST | CBS_SORT | CBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "",IDC_TABLE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,20,104,244,148
+    CONTROL         "",IDC_TABLE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,86,104,178,148
     CONTROL         "",IDC_FILEBROWSE,"MfcEditBrowse",WS_BORDER | WS_TABSTOP | 0x880,22,23,239,14,WS_EX_ACCEPTFILES
-    COMBOBOX        IDC_TARGET_TYPE,192,75,70,124,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "通行目标:",IDC_STATIC,147,78,41,12
-    COMBOBOX        IDC_FACTOR_TYPE,64,76,66,63,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "因子类型:",IDC_STATIC,21,78,41,11
+    COMBOBOX        IDC_TARGET_TYPE,64,75,198,124,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "通行目标:",IDC_STATIC,19,78,41,12
+    LISTBOX         IDC_SURFACE_TYPE,16,104,64,148,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
 END
 
 
@@ -323,7 +322,6 @@ BEGIN
     0, 0, 0, 0,
     0, 0, 0, 0,
     0, 0, 100, 100,
-    0, 0, 0, 0,
     0, 0, 0, 0,
     0, 0, 0, 0,
     0, 0, 0, 0,
