--- a/GISTin.vcxproj.filters
+++ b/GISTin.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="ParamDialog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AdoDatabase.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GISTin.rc">
@@ -125,6 +128,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CWorkbooks.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AdoDatabase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
