Access数据文件替换成Excel数据文件的修改完成。

--- a/GISTin.rc
+++ b/GISTin.rc
@@ -222,7 +222,7 @@ BEGIN
     LTEXT           "行人类型: ",IDC_STATIC1,21,49,38,8
     LTEXT           "通行模式: ",IDC_STATIC2,148,50,40,8
     COMBOBOX        IDC_WALK_TYPE,192,48,70,149,CBS_DROPDOWNLIST | CBS_SORT | CBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "",IDC_TABLE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,86,104,178,148
+    CONTROL         "",IDC_TABLE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,86,104,178,148
     CONTROL         "",IDC_FILEBROWSE,"MfcEditBrowse",WS_BORDER | WS_TABSTOP | 0x880,22,23,239,14,WS_EX_ACCEPTFILES
     COMBOBOX        IDC_TARGET_TYPE,64,75,198,124,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "通行目标:",IDC_STATIC,19,78,41,12
