--- a/GISTin.vcxproj.filters
+++ b/GISTin.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="AdoDatabase.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SplitDisDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GISTin.rc">
@@ -131,6 +134,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AdoDatabase.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SplitDisDialog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
