增加基本三角形的数据结构； 增加三角形集合的维护。

--- a/GISTin.rc
+++ b/GISTin.rc
@@ -126,6 +126,7 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "选起点",                         ID_STARTPNT
         MENUITEM "选终点",                         ID_ENDPNT
+        MENUITEM "test",                        ID_TESTCASE
     END
     POPUP "shapefile"
     BEGIN
