将点集加密改成两个子菜单项，保留栅格条带插入法的基础上，增加了另一个子菜单项，用于在三角形内部按照面积大小分配插入点个数。

--- a/GISTin.rc
+++ b/GISTin.rc
@@ -140,11 +140,16 @@ BEGIN
             MENUITEM "终点",                          ID_END_PT
             MENUITEM "结果路径",                        ID_RESULT_PATH
             MENUITEM "结果路径(TXT)",                   ID_RESULT_PATH_TXT
+            MENUITEM "结果路径邻域三角网",                   ID_NEIBOR_TIN
         END
         MENUITEM SEPARATOR
         MENUITEM "生成三角网",                       ID_TIN_GENERATION
         MENUITEM "最短路径生成",                      ID_CREATEPATH
-        MENUITEM "缩小点集并加密",                     ID_POINT_DENSIFY
+        POPUP "缩小点集并加密"
+        BEGIN
+            MENUITEM "栅格条带插入法",                     ID_DENSIFY_RASTER
+            MENUITEM "邻域三角网插入法",                    ID_DENSIFY_NEIBOR_TIN
+        END
     END
     POPUP "栅格数据"
     BEGIN
